# zombie-apocalypse-survivors-qt

./: .gitignore  CMakeLists.txt  README.md
include/: AppWindow.hpp  utils.hpp
include/managers/: GameStateManager.hpp  ItemsManager.hpp  ResourceManager.hpp  RoleManager.hpp  SessionManager.hpp
include/models/: GameState.hpp  PlayerCharacter.hpp  SessionStateModel.hpp
include/pages/: ActionsMenuPage.hpp  CharacterCreationPage.hpp  DisplayCharacterPage.hpp  ItemsShopPage.hpp  MainMenuPage.hpp
include/panels/: ActionsMenuPanel.hpp  CharacterActionsPanel.hpp  CharacterImagePanel.hpp  CharacterStatsPanel.hpp  GameMenuOverlay.hpp  GoBackPanel.hpp  ItemsPanel.hpp  PauseOverlayPanel.hpp
include/widgets/: CreateCharacterFormBox.hpp  DefaultPushButton.hpp  HoverButton.hpp  InfoBox.hpp  ItemPushButton.hpp
resources/: resources.qrc
resources/styles/: dark_theme.qss
src/: AppWindow.cpp  main.cpp  utils.cpp
src/managers/: GameStateManager.cpp  ItemsManager.cpp  ResourceManager.cpp  RoleManager.cpp  SessionManager.cpp
src/models/: GameState.cpp  PlayerCharacter.cpp
src/pages/: ActionsMenuPage.cpp  CharacterCreationPage.cpp  DisplayCharacterPage.cpp  ItemsShopPage.cpp  MainMenuPage.cpp
src/panels/: ActionsMenuPanel.cpp  CharacterActionsPanel.cpp  CharacterImagePanel.cpp  CharacterStatsPanel.cpp  GameMenuPanel.cpp  GoBackPanel.cpp  ItemsPanel.cpp  PauseOverlayPanel.cpp
src/widgets/: CreateCharacterFormBox.cpp  DefaultPushButton.cpp  HoverButton.cpp  InfoBox.cpp  ItemPushButton.cpp  PauseMenu.cpp
